--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,4 +14,5 @@ stages:
       - job: BuildFrontendApp
         displayName: Build Frontend App
         steps:
-          - script: echo building frontend app displayName: build frontend app
+          - script: echo building frontend app 
+            displayName: build frontend app
