--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,17 +1,16 @@
+# Definición de la canalización
 name: MyPipeline
 
-## Configuraciones de la canalización
+# Configuraciones de la canalización
 trigger:
-- main
+- push
 
-stages:
-  - stage: BuildApp
-    dependsOn: []
-    displayName: Build Apps
-    jobs:
-      - job: BuildFrontendApp
-        dependsOn: []
-        displayName: Build Frontend App
-        steps:
-          - script: echo building frontend app 
-            displayName: build frontend app
+# Pasos de la canalización
+steps:
+- task: MyTask@1
+  inputs:
+    arg1: value1
+
+# Salidas de la canalización
+outputs:
+- myOutput: value2
