--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,8 @@ stages:
       - job: MyBuildingJob
         displayName: My building job
         steps:
+          - script: ls -l
+            displayName: listing files            
           - script: echo i am building my app
             displayName: build step
       - job: MyTestingJob
@@ -20,6 +22,10 @@ stages:
         steps:
           - script: echo i am testing my app
             displayName: testing step
+          - task: Bash@3
+            inputs:
+              targetType: 'inline'
+              script: 'echo ''I am testing'''
   - stage: DeployApp
     displayName: Apps Deployment 
     jobs:
