Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,9 @@ stages:
       - job: MyBuildingJob
         displayName: My building job
         steps:
+          - task: Delay@1
+            inputs:
+              delayForMinutes: '1'
           - script: ls -l
             displayName: listing files            
           - script: echo i am building my app
