--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,29 +8,8 @@ trigger:
 pool: Azure Pipelines
 
 stages:
-  - stage: BuildApp
-    displayName: Build Apps
-    jobs:
-      - job: MyBuildingJob
-        displayName: My building job
-        steps:
-          - task: Bash@3
-            inputs:
-              targetType: 'inline'
-              script: 'sleep 30'
-          - script: ls -l
-            displayName: listing files            
-          - script: echo i am building my app
-            displayName: build step
-      - job: MyTestingJob
-        displayName: My testing job
-        steps:
-          - script: echo i am testing my app
-            displayName: testing step
-          - task: Bash@3
-            inputs:
-              targetType: 'inline'
-              script: 'echo ''I am testing'''
+  - template: tmpl_build_stage.yml
+  
   - stage: DeployApp
     displayName: Apps Deployment 
     jobs:
