--- a/tmpl_build_stage.yml
+++ b/tmpl_build_stage.yml
@@ -1,9 +1,12 @@
+parameters:
+  param1: ''
+
 stages:
   - stage: BuildApp
     displayName: Build Apps
     jobs:
       - job: MyBuildingJob
-        displayName: My building job in a template
+        displayName: My building job in a template ${{ paramters.param1 }}
         steps:
           - task: Bash@3
             inputs:
