--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
     displayName: Apps Deployment 
     jobs:
       - job: MyDeploymentJob
-        displayName: My deploying job
+        displayName: My deploying job with var $(my-var1)
         steps:
-          - script: echo deploying this app from master branch with var $(my-var1)
+          - script: echo deploying this app from master branch
             displayName: deploy frontend app
