--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ variables:
 stages:
   - template: tmpl_build_stage.yml
     parameters:
-      param1: ${{ variables.my-var1 }}
+      param1: ${{ my-var1 }}
   
   - stage: DeployApp
     displayName: Apps Deployment 
