--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,8 @@ pool: Default
 #pool: Azure Pipelines
 
 variables:
-  my-var1: 'this is var 1'
+  - name: 'my-var1'
+    value: 'this is var 1'
 
 stages:
   - template: tmpl_build_stage.yml
